--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,6 +18,7 @@
             <td><%= link_to "Delete", i, method: :delete, data:
                 {confirm: "Are you shure." } %>
             </td>
+            <td>Rate:<%=i.votes_count %>, <%= link_to "+", upvote_item_path(i) %></td>
           </tr>
       <% end %>
     </table>
