--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,6 +2,7 @@
 
  <%= form_for @item do |f| %>
     <p> Name: </br> <%= f.text_field :name %></p>
+    <p> Id: </br> <%= f.text_field :id %></p>
     <p> Price: </br> <%= f.text_field :price %></p>
     <p> Description: </br> <%= f.text_field :description %></p>
     <p> Weight: </br> <%= f.text_field :weight %></p>
